--- a/zomm_my_life/pubspec.yaml
+++ b/zomm_my_life/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   http: ^1.1.0
   flutter:
     sdk: flutter
-
+  path_provider: ^2.0.14
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
